# monster

./: .gitignore  .gitmodules  .zkml_precommit_witness.json  24D_LITERATURE_REVIEW.md  ADAPTIVE_SCAN.md  AI_PERSPECTIVES_PRIME_71.md  ARCHITECTURAL_NUMBERS_ZK_MEMES.md  ARTIFACT_MIRROR.md  BISIMULATION_COMPLETE.txt  BISIMULATION_DIAGRAM.txt  BISIMULATION_INDEX.md  BISIMULATION_PLAN.md  BISIMULATION_PROOF.md  BISIMULATION_SUMMARY.md  BOOTSTRAP_INTROSPECTION_RESULTS.md  BOOTSTRAP_MONSTER_ISOMORPHISM.md  BOOTSTRAP_SONG_AND_MERCH.md  BOTT_PERIODICITY.md  BOTT_PERIODICITY_REFLECTIONS.md  BREADTH_FIRST_PROOF.md  BREAKTHROUGH.md  CHANGES_2026-01-29.md  CI_CD_INTEGRATION.md  CODE_BENCHMARK.md  CODE_INDEX.md  COMPLETE_BISIMULATION_PROOF.md  COMPLETE_PRECEDENCE_HIERARCHY.md  COMPLEXITY_ANALYSIS.md  COMPLEXITY_LATTICE.md  COMPUTATIONAL_OMNISCIENCE.md  CONVERSION_SPEC.md  CORRECTED_71_ANALYSIS.md  CRITICAL_EVALUATION.md  CROSS_SYSTEM_PRECEDENCE_PLAN.md  CROSS_SYSTEM_RESULTS.md  CUDA_MISTRAL_DOCS.md  Cargo.toml  DEFERRED_71_PRECEDENCE.md  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_STATUS.md  (+584 more)
ai-sampler/: Cargo.toml  EXPECTED_RESULTS.md  HOMOTOPY_THEORY.md  README.md  RUNNING.md  run.sh
ai-sampler/src/: automorphic.rs  doc_converter.rs  emergence.rs  emergence_test.rs  flux_integration.rs  full_trace.rs  hf_sampler.rs  homotopy.rs  homotopy_test.rs  mistralrs_sampler.rs  model_lattice.rs  ollama_sampler.rs  orbit_runner.rs  progressive.rs  trace.rs  vision_sampler.rs
archive_org_reader/: Cargo.toml  README.md  build.sh  index.html
archive_org_reader/src/: lib.rs
c/: Makefile  (+2 more)
examples/gpt2-monster/: Cargo.toml  flake.nix
examples/gpt2-monster/src/: main.rs
examples/iarelife/: Cargo.toml  GRAPH.dot  GRAPH.json  IMAGE_PATTERNS.json  LEECH_LATTICE.json  README.md  RESIDUE_ANALYSIS.json  RESIDUE_REPORT.md  flake.nix  run_exact.sh
examples/iarelife/src/: classical.rs  eczoo_map.rs  evolve.rs  fixedpoint.rs  graph.rs  image_search.rs  invokeai_exact.rs  leech.rs  main.rs  residue.rs
examples/ollama-monster/: .gitignore  AUTOMORPHIC_FEEDBACK.json  CODE_MONSTER_MAP.json  COMPARISON.json  CONTEXT_EXPERIMENT.json  Cargo.toml  EIGENVECTOR.json  FEEDBACK_LOOPS.json  FULL_TRACE_LOG.json  HARMONIC_RESONANCES.json  HECKE_REPORT.md  MEDITATION_Golay_code.json  MEDITATION_Leech_lattice.json  MEDITATION_Monster_group.json  MODEL_SELECTION.md  MODULAR_LATTICE.json  MONSTER_INTROSPECTOR.md  MONSTER_SPORES.json  MULTIMODAL_PRIMES.json  MULTISCALE_HARMONICS.json  MULTI_SEED_FEEDBACK.json  RESULTS.md  RESULTS.tex  TRACE_Explain_the_Monster_group.json  TRACE_What_is_the_Golay_code.json  TRACE_What_is_the_Leech_lattice.json  VISION_PIPELINE.md  build.rs  convert_to_images.py  gpt2_harmonic_map.json  llama-3.2_1b_harmonic_map.json  phi-3-mini_harmonic_map.json  qwen2.5_3b_harmonic_map.json  test_diverse_seeds.sh  trace_vision.sh  trace_with_perf.sh
examples/ollama-monster/generated_audio/: prime_13_5616hz.txt  prime_23_9936hz.txt  prime_2_864hz.txt  prime_31_13392hz.txt  prime_41_17712hz.txt  prime_47_20304hz.txt  prime_71_30672hz.txt  prime_7_3024hz.txt
examples/ollama-monster/generated_images/: prime_11_text.txt  prime_13_text.txt  prime_17_text.txt  prime_29_text.txt  prime_2_text.txt  prime_31_text.txt  prime_3_text.txt  prime_41_text.txt  prime_59_text.txt  prime_5_text.txt  prime_71_text.txt  prime_7_text.txt
examples/ollama-monster/monster_macros/: Cargo.toml
examples/ollama-monster/perf_traces/: perf_1769565873.analysis.json  perf_regs_1769565971.analysis.json  perf_regs_1769566105.analysis.json  perf_regs_1769566105.data  perf_regs_1769566288.analysis.json  perf_regs_1769566288.data  perf_regs_1769567196.analysis.json  perf_regs_1769567196.data  perf_regs_1769567196.script  perf_regs_1769567201.analysis.json  perf_regs_1769567201.data  perf_regs_1769567201.script  perf_regs_1769567204.analysis.json  perf_regs_1769567204.data  perf_regs_1769567204.script  perf_regs_1769568647.analysis.json  perf_regs_1769568647.data  perf_regs_1769568652.analysis.json  perf_regs_1769568652.data  perf_regs_1769568656.analysis.json  perf_regs_1769568656.data  perf_regs_1769568659.analysis.json  perf_regs_1769568659.data  (+111 more)
lmfdb-rust/: Cargo.toml
lmfdb-rust/src/: decomposition_71.rs  lib.rs
monster_autoencoder_wasm/: Cargo.toml
monster_autoencoder_wasm/src/: lib.rs
onlyskills-repo/: .TenfoldWay.aux  .test_compute.aux  CARGO_RESTRICTION_SUMMARY.md  Cargo.toml  CommitValue.lean  DAO_CONSTITUTION.md  DONATION_GIT_LOG.txt  Dockerfile  ETERNAL_LEGENDS.md  EXECUTION_PLAN.md  InterventionVerifier.sol  LANGUAGES.md  LEGENDARY_FOUNDERS.md  MONSTER_2_46_MANIFEST.md  MONSTER_3_20_MANIFEST.md  Onlyskills.hs  Onlyskills.lean  Onlyskills.v  PROJECT_BISQUE_ZK71.md  README.md  README_HF.md  RepoScannerNovelty.lean  SESSION_SUMMARY.md  SOP_71_SHARDS.md  SOP_CARGO_PIPELIGHT.md  SOP_NO_PYTHON.md  SOP_VILE_CODE_CONTAINMENT.md  Skill.java  TenfoldWay.glob  TenfoldWay.lean  TenfoldWay.v  TenfoldWayCubical.agda  TenfoldWayHoTT.agda  TenfoldWayMathlib.lean  TenfoldWayUniMath.v  ZeroOntology.agda  ZeroOntology.hs  ZeroOntology.lean  ZeroOntology.v  ZeroOntologyMeta.v  (+150 more)
onlyskills-repo/api/: index.js
onlyskills-repo/chunks/: chunk_0.g  chunk_0.json
onlyskills-repo/debian/: control
onlyskills-repo/flakes/: pipelight-dev_analyzer_3.nix  pipelight-dev_compiler_1.nix  pipelight-dev_executor_7.nix  pipelight-dev_generator_6.nix  pipelight-dev_optimizer_2.nix  pipelight-dev_parser_0.nix  pipelight-dev_profiler_9.nix  pipelight-dev_tracer_8.nix  pipelight-dev_transformer_4.nix  pipelight-dev_validator_5.nix
onlyskills-repo/src/: gpu_monster.rs  lib.rs  wasm.rs  zero_ontology.rs  zkprologml_erdfa_abi.rs
onlyskills-repo/systemd/: monster-zone-0.service  monster-zone-1.service  monster-zone-2.service  monster-zone-3.service  monster-zone-4.service  monster-zone-5.service  monster-zone-6.service  monster-zone-7.service  monster-zone-8.service  monster-zone-9.service
onlyskills-repo/threat_model_closure/: dependencies.json  git_threat_model.pl
tests/: Cargo.toml
tests/tests/: integration.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+3913 files in other folders)
