[package]
name = "lmfdb-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.10"

[[bin]]
name = "rust_gcd"
path = "src/bin/rust_gcd.rs"

[[bin]]
name = "bisimulation_proof"
path = "src/bin/bisimulation_proof.rs"
