[package]
name = "gpt2-monster"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = "0.20"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
cuda = ["candle-core/cuda"]
